# pdfmaker-fe

./: Cargo.toml  Dockerfile  DockerfileV2.0  LICENSE  README.md  docker-compose.yml
.github/workflows/: docker-deploy.yml
src/: main.rs
src/config/: App_config.rs  mod.rs
src/routes/: Pdf.rs  mod.rs
src/services/: email_service.rs  footer_service.rs  header_left_service.rs  header_right_service.rs  mod.rs  pdf_service.rs  products_service.rs  qr_service.rs  row_info_service.rs  sub_total_service.rs  table_service.rs
templates/: factura_email.html
